# mxw-sort

./: .gitignore  README.md  pyproject.toml
mxw_sort/: artifacts.py  cli.py  config.py  export.py  io_maxwell.py  ks4.py  pipeline.py  preprocess.py  qc.py  stim_times.py
scripts/: README.md  cout.sh  mxw_sort.sbatch  run_batch.sh  submit_sort.sh
