[project.scripts]
mxw-sort = "mxw_sort.cli:app"

[tool.setuptools]
packages = ["mxw_sort"]

[project]
name = "mxw-sort"
version = "0.1.0"
description = "Internal pipeline for Maxwell .raw.h5 → SpikeInterface preprocessing → Kilosort4 sorting → QC + folder mirrored outputs"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Internal / Lab Use Only" }

authors = [
  { name = "Andrew Chinn" }
]

dependencies = [
  # Core
  "numpy",
  "scipy",
  "h5py",
  "pandas",
  "scikit-learn",
  "numba",
  # SpikeInterface
  "spikeinterface",
  "neo",
  "probeinterface",
  "zarr",
  "kilosort",
  # Utilities and QC
  "matplotlib",
  "tqdm",
  "pyyaml",
  "packaging",
  "psutil",
  "cloudpickle",
  "typer",
  # CLI
  "python-dotenv",
  "jupyter>=1.1.1",
  "ipykernel>=7.2.0",
  "rastermap>=1.0",
  "elephant>=1.1.1",
  "mne>=1.11.0",
  "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
  "black",
  "ruff",
  "ipython",
  "pytest",
]

[tool.uv]
package = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

